updated Indonesian translation

--- a/po/wesnoth-dm/id.po
+++ b/po/wesnoth-dm/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-16 13:24+0700\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-25 17:51+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -433,25 +433,15 @@ msgstr "Tidak! Methor... Jangan mati!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Perhatikan kata-kata terakhir saya, Delfador! Pergilah ke timur laut menuju "
+"Perhatikan kata-kata terakhir saya, Delfador! Pergilah ke barat laut menuju "
 "Weldyn, dan carilah teman saya Leollyn. Dia akan membantu anda."
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
@@ -460,7 +450,7 @@ msgid ""
 msgstr ""
 "Bagus sekali, Delfador! Saya kira saya telah melatih anda dengan baik, dan "
 "anda benar-benar siap untuk mencari keberuntungan anda. Hari-hari perjalanan "
-"saya sudah selesai, tetapi sudah waktunya bagi anda untuk  pergi ke timur "
+"saya sudah selesai, tetapi sudah waktunya bagi anda untuk pergi ke barat "
 "laut menuju Weldyn, dan carilah teman saya Leollyn. Dia akan membantu anda."
 
 #. [message]: id=Delfador
@@ -2336,8 +2326,8 @@ msgid ""
 msgstr ""
 "Aku komandan di sini, tetapi kami telah kehilangan tepi utara sungai. "
 "Makhluk aneh berjalan di malam hari; senjata kita tampaknya hampir tidak "
-"membakar mereka. Aku takut kita tidak dapat terus melawan serangan dalam "
-"kekuatan."
+"mencederai mereka. Aku takut kita tidak dapat terus bertahan melawan "
+"serangan yang kuat."
 
 #. [message]: speaker=Delfador
 #. "be of heart" -> "have courage" in modern English.
@@ -2346,9 +2336,9 @@ msgid ""
 "I have fought these before. Be of heart: impact weapons and magic can defeat "
 "them. Do I recall aright that there is a school of mages not far from here?"
 msgstr ""
-"Saya telah bertempur dengan ini sebelumnya. Jadilah hati: dampak senjata dan "
-"sihir bisa mengalahkan mereka. Apakah ingatan saya benar bahwa ada sebuah "
-"sekolah penyihir tidak jauh dari sini?"
+"Saya telah bertempur dengan ini sebelumnya. Besarkan hati mu: senjata "
+"peremuk dan sihir bisa mengalahkan mereka. Apakah ingatan saya benar bahwa "
+"ada sebuah sekolah penyihir tidak jauh dari sini?"
 
 #. [message]: speaker=Niktor
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:418
@@ -4395,8 +4385,8 @@ msgid ""
 "I have prepared some holy water. Sprinkle it on your impact weapon and smash "
 "those foul creatures into dust!"
 msgstr ""
-"Saya sudah menyiapkan beberapa air suci. Percikan pada senjata anda dan "
-"hancurkan makhluk busuk itu menjadi debu!"
+"Saya sudah menyiapkan beberapa air suci. Percikan pada senjata peremuk anda "
+"dan hancurkan makhluk busuk itu menjadi debu!"
 
 #. [message]: speaker=Iliah-Malal
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:376
