--- a/po/wesnoth-manpages/id.po
+++ b/po/wesnoth-manpages/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "POT-Creation-Date: 2011-08-27 10:13+0300\n"
-"PO-Revision-Date: 2011-09-22 17:20+0700\n"
+"PO-Revision-Date: 2011-11-24 17:33+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -576,12 +576,12 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:190
 #, no-wrap
 msgid "B<--strict-validation>"
-msgstr ""
+msgstr "B<--strict-validation>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:193
 msgid "validation errors are treated as fatal errors."
-msgstr ""
+msgstr "kesalahan pengesahan diperlakukan sebagai kesalahan fatal."
 
 # type: TP
 #. type: TP
