--- a/po/wesnoth-units/id.po
+++ b/po/wesnoth-units/id.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-11-12 17:06+0700\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-24 17:35+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -22,16 +22,6 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:18
 #: data/core/units/dwarves/Dragonguard.cfg:20
-#, fuzzy
-#| msgid ""
-#| "It is not clear why the Dragonguards are called what they are, a name "
-#| "given by their dwarven brethren. Some speculate that the name comes from "
-#| "their weapon of choice, these strange staffs that belch fire and death. "
-#| "Others have surmised that it is because such weapons would be a threat "
-#| "against even a true Dragon, should such a thing be seen again in the "
-#| "known world. Whatever the case, it is for these weapons that the "
-#| "guardians of the great Dwarven citadels are both renowned and feared; "
-#| "weapons that have broken the mightiest of warriors with a single blow."
 msgid ""
 "It is not clear why the Dragonguards are called what they are, a name given "
 "by their dwarven brethren. Some speculate that the name comes from their "
@@ -42,14 +32,14 @@ msgid ""
 "Dwarven citadels are both renowned and feared; weapons that have broken the "
 "mightiest of warriors with a single blow."
 msgstr ""
-"Tidak diketahui mengapa dinamai Nagawan, sebuah nama yang diberikan oleh "
-"saudara-saudara mereka. Beberapa berspekulasi bahwa nama tersebut diberikan "
-"dari senjata pilihan mereka, tongkat aneh ini yang menyemburkan api dan "
-"kematian. Yang lain menduga bahwa nama ini diberikan karena senjata seperti "
-"itu berbahaya bahkan melawan Naga sungguhan, jika makhluk tersebut masih "
-"bisa dilihat di bumi ini. Apapun alasannya, karena senjata ini terkenal dan "
-"ditakuti oleh pengawal benteng kota Dwarf yang megah; senjata yang "
-"menghancurkan petarung terhebat dengan satu tembakan."
+"Tidak diketahui mengapa Para Nagawan menamai diri mereka seperti itu, sebuah "
+"nama yang diberikan oleh saudara-saudara mereka. Beberapa berspekulasi bahwa "
+"nama tersebut berasal dari senjata pilihan mereka, tongkat aneh ini yang "
+"menyemburkan api dan kematian. Yang lain menduga bahwa nama ini diberikan "
+"karena senjata seperti itu berbahaya bahkan melawan Naga sungguhan, jika "
+"makhluk tersebut masih bisa dilihat di bumi ini. Apapun alasannya, karena "
+"senjata ini pengawal benteng kota Dwarf yang megah terkenal dan ditakuti; "
+"senjata yang menghancurkan petarung terhebat dengan satu tembakan."
 
 #. [attack]: type=blade
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:25
@@ -266,19 +256,6 @@ msgstr "tongkat guntur"
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:21
 #: data/core/units/dwarves/Thunderguard.cfg:21
-#, fuzzy
-#| msgid ""
-#| "The Dwarven Thunderguards are famed for their curious weaponry, these "
-#| "strange staffs of wood and iron that make a thunderous noise in their "
-#| "anger. The machinations behind this weaponry are a mystery, a secret "
-#| "taken to the grave by the dwarves of Knalga who wield them, and are "
-#| "assumed to have even forged them. The most that is known are reports of "
-#| "dwarves pouring a strange black dust into the mouth of their weapons, "
-#| "which some say is a food to fuel the beast imprisoned within.\n"
-#| "\n"
-#| "Though a single shot from these ‘thundersticks’ can take several minutes "
-#| "to prepare, the results are seen by the Dwarves as being well worth the "
-#| "wait."
 msgid ""
 "The Dwarven Thunderguards are famed for their curious weaponry, these "
 "strange staves of wood and iron that make a thunderous noise in their anger. "
@@ -293,12 +270,12 @@ msgid ""
 msgstr ""
 "Dwarf Petir terkenal karena persenjataan aneh mereka, tongkat kayu dan besi "
 "aneh ini yang membuat suara bergemuruh di dalam kemarahannya. Intrik di "
-"belakang persenjataan ini adalah sebuah misteri, sebuah rahasia dibawa "
-"sampai perkuburan oleh para dwarf Knalga yang memakainya, dan bahkan yang "
-"dianggap membuatnya. Yang paling diketahui adalah laporan-laporan tentang "
-"dwarf-dwarf menuangkan debu hitam aneh ke dalam mulut senjata mereka, yang "
-"beberapa mengatakan adalah makanan untuk memberi makan binatang buas yang "
-"terpenjara di dalamnya.\n"
+"belakang persenjataan ini adalah sebuah misteri, sebuah rahasia yang dibawa "
+"sampai mati oleh para dwarf Knalga yang memakainya, dan bahkan yang dianggap "
+"membuatnya. Yang paling diketahui adalah laporan-laporan tentang dwarf-dwarf "
+"menuangkan debu hitam aneh ke dalam mulut senjata mereka, yang beberapa "
+"mengatakan adalah makanan untuk memberi makan binatang buas yang terpenjara "
+"di dalamnya.\n"
 "\n"
 "Meskipun sebuah tembakan dari 'tongkat guntur' ini bisa menghabiskan "
 "beberapa menit untuk disiapkan, hasilnya dilihat oleh Para Dwarf seimbang "
@@ -2169,7 +2146,7 @@ msgstr ""
 "taktik berisiko, sangat bermanfa'at dan telah terbukti berkali-kali di medan "
 "perang. Penunggang kuda yang paling unggul melawan infanteri, terutama "
 "mereka yang telah jatuh keluar jalur, tetapi harus berhati-hati terhadap "
-"spearmen dan pemanah yang mana mereka mengundang target yang besar. "
+"penombak dan pemanah yang mana mereka merupakan target yang besar. "
 
 #. [unit_type]: id=Bowman, race=human
 #: data/core/units/humans/Loyalist_Bowman.cfg:4
@@ -2438,11 +2415,11 @@ msgid ""
 "albeit at an obvious cost in tactical flexibility."
 msgstr ""
 "infanteri berat adalah pejuang gagah berlapis baja penuh dan menghunus "
-"senjata yang berdampak besar. Meskipun mereka melawan dengan kekuatan yang "
-"tak tertandingi dalam pertempuran jarak dekat, mereka memiliki mobilitas "
-"lambat dan hanya baik digunakan dalam pertahanan statis area daerah yang "
+"senjata peremuk besar. Meskipun mereka melawan dengan kekuatan yang tak "
+"tertandingi dalam pertempuran jarak dekat, mereka memiliki mobilitas lambat "
+"dan hanya baik digunakan dalam pertahanan statis area daerah yang "
 "dibentengi. Beberapa dari mereka dalam pertempuran akan sangat kaku, "
-"meskipun jelas mengorbankan  fleksibilitas taktis."
+"meskipun jelas mengorbankan fleksibilitas taktis."
 
 #. [attack]: type=impact
 #: data/core/units/humans/Loyalist_Heavy_Infantryman.cfg:38
@@ -2727,7 +2704,7 @@ msgstr ""
 "satu yang tidak cocok dengan petani . Tombak lebih mudah untuk dibuat dan "
 "dapat digunakan dengan baik bahkan tanpa mata tombak, meskipun sebagian "
 "besar mampu menghasilkannya. Mengenakan baju besi kulit, dan sering "
-"bersenjata dengan perisai dan beberapa tombak, spearmen adalah tentara yang "
+"bersenjata dengan perisai dan beberapa tombak, penombak adalah tentara yang "
 "paling pokok, sering dilemparkan ke garis depan dengan hanya pelatihan yang "
 "paling dasar."
 
@@ -2749,7 +2726,7 @@ msgstr ""
 "Seorang prajurit berpengalaman sering akan membekali diri dengan baju "
 "bersisik atau baju besi berantai, dan pedang yang kokoh. Meskipun menukar "
 "tombak mereka untuk dapat pedang merupakan perubahan menggetarkan, "
-"kebanyakan spearmen akan melewati kesempatan itu, mengetahui terlalu banyak "
+"kebanyakan penombak akan melewati kesempatan itu, mengetahui terlalu banyak "
 "keterbatasan senjata yang mereka tinggalkan sebelumnya. pedang bukanlah "
 "tanpa kelemahan, tapi lebih fleksibel daripada tombak, dan jauh lebih baik "
 "dalam jarak dekat."
@@ -3717,9 +3694,9 @@ msgid ""
 msgstr ""
 "Para manusia duyung yang menguasai seni lembing dapat menjadi hampir sama "
 "efektif sebagai pemanah yang — meskipun berat senjata mereka menghalangi "
-"jangkauan mereka, dampak serangan manusia duyung pelembing jauh lebih besar. "
-"Dalam air, mobilitas manusia duyung lebih bermanfaat ketika menghadapi musuh "
-"yang tidak bisa berenang."
+"jangkauan mereka, tumbukan serangan manusia duyung pelembing jauh lebih "
+"besar. Dalam air, mobilitas manusia duyung lebih bermanfaat ketika "
+"menghadapi musuh yang tidak bisa berenang."
 
 #. [unit_type]: id=Merman Netcaster, race=merman
 #: data/core/units/merfolk/Netcaster.cfg:4
@@ -4131,9 +4108,9 @@ msgid ""
 msgstr ""
 "Para ahli berbeda mengenai keturunan dari Ular Air. Beberapa berpendapat "
 "bahwa mereka adalah versi mudanya ketika belum matang, atau sepupu "
-"dewasanya, Naga Laut. Lain-lain terus mereka sebagai cabang primitif dari "
-"Naga. Yang pasti adalah bahwa adalah bijaksana untuk menghindari perairan di "
-"mana mereka dikenal suka berkumpul."
+"dewasanya, Ular Laut. Lain-lain terus mereka sebagai cabang primitif dari "
+"Kobra. Yang pasti adalah bahwa adalah bijaksana untuk menghindari perairan "
+"di mana mereka dikenal suka berkumpul."
 
 #. [unit_type]: id=Wolf, race=wolf
 #: data/core/units/monsters/Wolf.cfg:4
@@ -4253,7 +4230,7 @@ msgstr ""
 #. [unit_type]: id=Naga Warrior, race=naga
 #: data/core/units/nagas/Warrior.cfg:4
 msgid "Naga Warrior"
-msgstr "Prajurit Kobra"
+msgstr "Kobra Prajurit "
 
 #. [unit_type]: id=Naga Warrior, race=naga
 #: data/core/units/nagas/Warrior.cfg:19
@@ -4653,7 +4630,7 @@ msgid ""
 "the strange magics their kind possess, and are beings to be wary of if ever "
 "seen."
 msgstr ""
-"Saurian tertentu terlihat mengenakan tanda-tanda kebesaran rahasia dan "
+"Saurian tertentu terlihat mengenakan tanda-tanda kebesaran misterius dan "
 "menutupi kepala sampai kaki yang mengejutkan, bentuk esoterik dan menandai, "
 "baik dengan cat dan tato. Beberapa menduga mereka menjadi visioner, atau "
 "peramal di antara sejenisnya. Tetapi fungsi 'sosial' apa pun yang mereka "
